# my-http-server-swagger

./: Cargo.toml  README.md
src/: as_token_stream.rs  consts.rs  generic_utils.rs  lib.rs  proprety_type_ext.rs  types.rs
src/action_builder/: action_builder.rs  generate_handle_request_fn.rs  generate_http_action_description_fn.rs  result_model_generator.rs
src/action_builder/attributes/: api_data.rs  attribute_value_validators.rs  attributes.rs  http_method.rs  http_result.rs  http_result_model.rs  http_route.rs  mod.rs  result_type.rs
src/enum_doc/: attr.rs  enum_json.rs  generate.rs  generate_default.rs  http_enum_structure.rs  impl_from_i32.rs  impl_from_str_trait.rs  mod.rs
src/http_input_object_structure/: generate.rs  mod.rs  struct_prop_ext.rs
src/http_object_structure/: attr.rs  generate.rs  generate_crate_http_object_structure.rs  generate_data_provider.rs  generate_data_structure_provider.rs  http_object_structure.rs  mod.rs  out_json.rs  struct_prop_ext.rs
src/input_models/: attr.rs  body_nor_body_fields.rs  docs.rs  generate.rs  http_input_props.rs  input_field.rs  input_fields.rs  input_model_struct_property_ext.rs  mod.rs
src/input_models/model_reader/: header_reader.rs  mod.rs  model_reader.rs  query_string.rs  query_string_value_reader.rs  read_body.rs  read_not_body.rs  reading_from_header.rs  reading_from_path.rs  reading_query_string.rs  rust_builders.rs  utils.rs
src/out_enum_with_model/: generate.rs
src/reflection/: attribute.rs  attributes.rs  enum_case.rs  mod.rs  property.rs  property_type.rs
(+19 files in other folders)
