[package]
name = "my-http-server-swagger"
version = "0.3.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "*", features = ["extra-traits"] }
quote = "*"
macros-utils = { tag = "0.1.0", git = "https://github.com/MyJetTools/macros-utils.git" }
types-reader = { tag = "0.1.0", git = "https://github.com/MyJetTools/types-reader.git" }
