[package]
name = "my-http-server-swagger"
version = "0.4.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "*", features = ["extra-traits"] }
quote = "*"
types-reader = { tag = "0.2.0", git = "https://github.com/MyJetTools/types-reader.git" }
proc-macro2 = "*"
lazy_static = "*"
rust-extensions = { tag = "0.1.2", git = "https://github.com/MyJetTools/rust-extensions.git" }
