[package]
name = "my-http-server-swagger"
version = "0.5.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "*", features = ["extra-traits"] }
quote = "*"
types-reader = { tag = "0.3.0", git = "https://github.com/MyJetTools/types-reader.git" }
proc-macro2 = "*"
rust-extensions = { tag = "0.1.3", git = "https://github.com/MyJetTools/rust-extensions.git" }
